--- a/react-project/index.html
+++ b/react-project/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<div class="appMain"></div>
+	<div></div>
 	<script type="text/babel" src="./js/component.js"></script>
 </body>
 </html>
