--- a/react-project/index.html
+++ b/react-project/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<link rel="stylesheet" type="text/css" href="./css/common.css" />
 	<script src="./js/react.js"></script>
     <script src="./js/react-dom.js"></script>
     <script src="./js/browser.min.js"></script>
@@ -10,7 +12,6 @@
 </head>
 <body>
 	<div class="appMain"></div>
-	<div></div>
 	<script type="text/babel" src="./js/component.js"></script>
 </body>
 </html>
